--- a/pandas/series.ipynb
+++ b/pandas/series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 128,
    "id": "a013e1eb",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 129,
    "id": "aa6c61bb",
    "metadata": {},
    "outputs": [
@@ -36,10 +36,10 @@
        "1       Vanilla\n",
        "2    Strawberry\n",
        "3    Rum Raisin\n",
-       "dtype: object"
+       "dtype: str"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 130,
    "id": "3485106e",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 131,
    "id": "870ab92e",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 132,
    "id": "999505da",
    "metadata": {},
    "outputs": [
@@ -131,10 +131,10 @@
        "Salmon    Orange\n",
        "Tuna         Red\n",
        "Eel        Brown\n",
-       "dtype: object"
+       "dtype: str"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 133,
    "id": "07a800f5",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 134,
    "id": "cb03e997",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "np.float64(8.8)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 135,
    "id": "5501c039",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "np.float64(18.095480000000006)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 136,
    "id": "15fcf856",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "np.float64(2.9333333333333336)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 137,
    "id": "472570cb",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "np.float64(1.5457791994115246)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 138,
    "id": "ebfad077",
    "metadata": {},
    "outputs": [
@@ -298,10 +298,10 @@
        "4    Brilliant\n",
        "5       Humble\n",
        "6        Smart\n",
-       "dtype: object"
+       "dtype: str"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 139,
    "id": "6e92c2ce",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "7"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 140,
    "id": "ace72eb1",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "False"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,18 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 141,
    "id": "b65d456a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Luv Ratan', 'Smart', 'Handsome', 'Charming', 'Brilliant',\n",
-       "       'Humble', 'Smart'], dtype=object)"
+       "<StringArray>\n",
+       "['Luv Ratan', 'Smart', 'Handsome', 'Charming', 'Brilliant', 'Humble', 'Smart']\n",
+       "Length: 7, dtype: str"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 142,
    "id": "1df0deaa",
    "metadata": {},
    "outputs": [
@@ -391,7 +392,7 @@
        "RangeIndex(start=0, stop=7, step=1)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,17 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 143,
    "id": "01e482fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "pandas.arrays.StringArray"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,23 +424,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 144,
    "id": "c890f283",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pandas.core.indexes.range.RangeIndex"
+       "pandas.RangeIndex"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(adjectives.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "279b1a9c",
+   "metadata": {},
+   "source": [
+    "##### Parameters and Arguments\n",
+    "\n",
+    "    -   Parameter is a name to a expected input to a function or method. It is a placeholder.\n",
+    "    -   An argument is the concrete valeu we provide for a parameter during invocation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "7a8b7194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = [\"Apple\", \"Orange\",\"Plum\", \"Grape\", \"Blueberry\", \"Watermelon\"]\n",
+    "weekdays = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Monday\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "86c0bdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Apple            Monday\n",
+       "Orange          Tuesday\n",
+       "Plum          Wednesday\n",
+       "Grape          Thursday\n",
+       "Blueberry        Friday\n",
+       "Watermelon       Monday\n",
+       "dtype: str"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(fruits)\n",
+    "pd.Series(weekdays)\n",
+    "pd.Series(fruits, weekdays) #The first argument becomes the data and the second argument becomes the index of that data\n",
+    "pd.Series(weekdays,fruits)  # index and data are interchanged, oeders matters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "4b8c1b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Monday            Apple\n",
+       "Tuesday          Orange\n",
+       "Wednesday          Plum\n",
+       "Thursday          Grape\n",
+       "Friday        Blueberry\n",
+       "Monday       Watermelon\n",
+       "dtype: str"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(data=fruits,index=weekdays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "36202508",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Monday            Apple\n",
+       "Tuesday          Orange\n",
+       "Wednesday          Plum\n",
+       "Thursday          Grape\n",
+       "Friday        Blueberry\n",
+       "Monday       Watermelon\n",
+       "dtype: str"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(fruits, index=weekdays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "b4bfc0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Apple\n",
+       "1        Orange\n",
+       "2          Plum\n",
+       "3         Grape\n",
+       "4     Blueberry\n",
+       "5    Watermelon\n",
+       "dtype: str"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(fruits)   # This will create a numeric index"
    ]
   }
  ],
@@ -459,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
