started with numpy quick start guide:

--- a/numpy/introduction.ipynb
+++ b/numpy/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 146,
    "id": "1b5ffa52",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 147,
    "id": "9cba5eb3",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 148,
    "id": "f9cf46cf",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 149,
    "id": "123efbbe",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 150,
    "id": "de5ee294",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 151,
    "id": "e31cff20",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 152,
    "id": "a21e29c4",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 153,
    "id": "28b16709",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "       [1, 2, 3, 4, 5]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 154,
    "id": "01cf5fad",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "       [0, 2, 4, 6, 8]])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 155,
    "id": "23fdedb7",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "       [4, 4]])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 156,
    "id": "a7ce30d5",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "(5, 2)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 157,
    "id": "6d9a28f9",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 158,
    "id": "cd84113e",
    "metadata": {},
    "outputs": [
@@ -289,6 +289,541 @@
     "print(my_array.shape)\n",
     "print(my_array.ndim)\n",
     "print(my_array.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "5a9519b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30,  40,  50],\n",
+       "       [ 60,  70,  80,  90, 100]])"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array.reshape(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "7d2cb8e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30,  40,  50,  60,  70,  80,  90, 100]])"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array.reshape(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "977a2e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 10,  20,  30,  40,  50,  60,  70,  80,  90, 100])"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "abe24e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10],\n",
+       "       [ 20],\n",
+       "       [ 30],\n",
+       "       [ 40],\n",
+       "       [ 50],\n",
+       "       [ 60],\n",
+       "       [ 70],\n",
+       "       [ 80],\n",
+       "       [ 90],\n",
+       "       [100]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array.reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "f9bd5b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3],\n",
+       "       [4, 5]])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([2,3,4,5]).reshape(2,2)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "396c9398",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [3, 5]])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f6da676",
+   "metadata": {},
+   "source": [
+    "#### Inbuilt numerical data creation numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "06207d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(4,int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "2019d3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((4,4), float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "f894a8a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(4,int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "d06006aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0],\n",
+       "       [0, 0]])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(4,int).reshape(2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "380dc23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((4,4), float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "0b02584a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3, 4, 5],\n",
+       "       [6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(2,10,1).reshape(2,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "1b278405",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,  25.,  50.,  75., 100.])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,100,5) # it will provide 5 elements at equal distance between 0 and 100\n",
+    "#These are very useful for chart axis and other labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "a7ab9c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10]])"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(1,11,1).reshape(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "4dc9cded",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.identity(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "88a935c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.identity(10).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "153e0851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.        ,  2.20408163,  2.40816327,  2.6122449 ,  2.81632653,\n",
+       "        3.02040816,  3.2244898 ,  3.42857143,  3.63265306,  3.83673469,\n",
+       "        4.04081633,  4.24489796,  4.44897959,  4.65306122,  4.85714286,\n",
+       "        5.06122449,  5.26530612,  5.46938776,  5.67346939,  5.87755102,\n",
+       "        6.08163265,  6.28571429,  6.48979592,  6.69387755,  6.89795918,\n",
+       "        7.10204082,  7.30612245,  7.51020408,  7.71428571,  7.91836735,\n",
+       "        8.12244898,  8.32653061,  8.53061224,  8.73469388,  8.93877551,\n",
+       "        9.14285714,  9.34693878,  9.55102041,  9.75510204,  9.95918367,\n",
+       "       10.16326531, 10.36734694, 10.57142857, 10.7755102 , 10.97959184,\n",
+       "       11.18367347, 11.3877551 , 11.59183673, 11.79591837, 12.        ])"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(2,12,50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "f1ed0fa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ],\n",
+       "       [ 0.1010101 ],\n",
+       "       [ 0.2020202 ],\n",
+       "       [ 0.3030303 ],\n",
+       "       [ 0.4040404 ],\n",
+       "       [ 0.50505051],\n",
+       "       [ 0.60606061],\n",
+       "       [ 0.70707071],\n",
+       "       [ 0.80808081],\n",
+       "       [ 0.90909091],\n",
+       "       [ 1.01010101],\n",
+       "       [ 1.11111111],\n",
+       "       [ 1.21212121],\n",
+       "       [ 1.31313131],\n",
+       "       [ 1.41414141],\n",
+       "       [ 1.51515152],\n",
+       "       [ 1.61616162],\n",
+       "       [ 1.71717172],\n",
+       "       [ 1.81818182],\n",
+       "       [ 1.91919192],\n",
+       "       [ 2.02020202],\n",
+       "       [ 2.12121212],\n",
+       "       [ 2.22222222],\n",
+       "       [ 2.32323232],\n",
+       "       [ 2.42424242],\n",
+       "       [ 2.52525253],\n",
+       "       [ 2.62626263],\n",
+       "       [ 2.72727273],\n",
+       "       [ 2.82828283],\n",
+       "       [ 2.92929293],\n",
+       "       [ 3.03030303],\n",
+       "       [ 3.13131313],\n",
+       "       [ 3.23232323],\n",
+       "       [ 3.33333333],\n",
+       "       [ 3.43434343],\n",
+       "       [ 3.53535354],\n",
+       "       [ 3.63636364],\n",
+       "       [ 3.73737374],\n",
+       "       [ 3.83838384],\n",
+       "       [ 3.93939394],\n",
+       "       [ 4.04040404],\n",
+       "       [ 4.14141414],\n",
+       "       [ 4.24242424],\n",
+       "       [ 4.34343434],\n",
+       "       [ 4.44444444],\n",
+       "       [ 4.54545455],\n",
+       "       [ 4.64646465],\n",
+       "       [ 4.74747475],\n",
+       "       [ 4.84848485],\n",
+       "       [ 4.94949495],\n",
+       "       [ 5.05050505],\n",
+       "       [ 5.15151515],\n",
+       "       [ 5.25252525],\n",
+       "       [ 5.35353535],\n",
+       "       [ 5.45454545],\n",
+       "       [ 5.55555556],\n",
+       "       [ 5.65656566],\n",
+       "       [ 5.75757576],\n",
+       "       [ 5.85858586],\n",
+       "       [ 5.95959596],\n",
+       "       [ 6.06060606],\n",
+       "       [ 6.16161616],\n",
+       "       [ 6.26262626],\n",
+       "       [ 6.36363636],\n",
+       "       [ 6.46464646],\n",
+       "       [ 6.56565657],\n",
+       "       [ 6.66666667],\n",
+       "       [ 6.76767677],\n",
+       "       [ 6.86868687],\n",
+       "       [ 6.96969697],\n",
+       "       [ 7.07070707],\n",
+       "       [ 7.17171717],\n",
+       "       [ 7.27272727],\n",
+       "       [ 7.37373737],\n",
+       "       [ 7.47474747],\n",
+       "       [ 7.57575758],\n",
+       "       [ 7.67676768],\n",
+       "       [ 7.77777778],\n",
+       "       [ 7.87878788],\n",
+       "       [ 7.97979798],\n",
+       "       [ 8.08080808],\n",
+       "       [ 8.18181818],\n",
+       "       [ 8.28282828],\n",
+       "       [ 8.38383838],\n",
+       "       [ 8.48484848],\n",
+       "       [ 8.58585859],\n",
+       "       [ 8.68686869],\n",
+       "       [ 8.78787879],\n",
+       "       [ 8.88888889],\n",
+       "       [ 8.98989899],\n",
+       "       [ 9.09090909],\n",
+       "       [ 9.19191919],\n",
+       "       [ 9.29292929],\n",
+       "       [ 9.39393939],\n",
+       "       [ 9.49494949],\n",
+       "       [ 9.5959596 ],\n",
+       "       [ 9.6969697 ],\n",
+       "       [ 9.7979798 ],\n",
+       "       [ 9.8989899 ],\n",
+       "       [10.        ]])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,10,100).reshape(-1,1)"
    ]
   }
  ],
